--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -7,11 +7,20 @@
 	</ul>
 {% elif question %}
 	<ul>
-	{{question}}
-		{% for choice in question.choice_set.all %}
-			<li>{{ choice.choice_text }}</li>
-		{% endfor %}
+	<h1>{{question}}</h1>
+	{%if error_message%}<p><strong>{{error_message}}</strong></p>{%endif%}
+		<form action="{% url 'polls:vote' question.id%}" method = "POST">
+			{% csrf_token%}
+			{% for choice in question.choice_set.all %}
+				<input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+    			<label for="choice{{ forloop.counter }}">{{ choice.choice_text }}
+    			</label><br/>
+				
+			{% endfor %}
+			<input type="submit" value="Vote" name="Submit" />
+		</form>
 	<ul>
+
 {% else %}
 	<p>No polls are available</p>
 {% endif %}
